<?xml version="1.0"?>
<package format="2">
  <name>tianbot_mini_parking</name>
  <version>0.1.0</version>
  <description>Hybrid A* parking planner and path follower for tianbot_mini.</description>

  <maintainer email="zzg2020303251-hue@users.noreply.github.com">zzg2020303251-hue</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gmapping</depend>
  <depend>amcl</depend>
  <depend>map_server</depend>
  <depend>nav_msgs</depend>
  <depend>rviz</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>ydlidar_ros</depend>
  <depend>visualization_msgs</depend>
</package>
